<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRL"
    android:orientation="horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorToolbar">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/LinearDN"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text4"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorRL"
            android:gravity="center"
            android:text="Vui lòng đăng nhập vào tài khoản của bạn để tiếp tục sử dụng dịch vụ"
            android:textColor="@android:color/black"
            android:textSize="20dp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:background="@android:color/background_light"
            android:layout_height="50dp"
            android:hint="@string/email"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/matkhau"
            android:background="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/matkhau"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnDN"
            android:background="@android:color/holo_blue_light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30dp"
            android:textColor="@color/colorLinear3"
            android:hint="@string/dangnhap"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorRL"
            android:gravity="center"
            android:text="Hoặc"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/Linear5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorRL"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnFB"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorFb"
                android:gravity="center"
                android:text="FACEBOOK"
                android:textColor="@android:color/background_light"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnGg"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/colorGg"
                android:gravity="center"
                android:text="GOOGLE"
                android:textColor="@android:color/background_light"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/quenmk"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="130dp"
            android:gravity="center"
            android:text="Quên mật khẩu?"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/dangky"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="110dp"
            android:gravity="center"
            android:text="Đăng ký tài khoản mới"
            android:textColor="@android:color/black" />


    </LinearLayout>

</RelativeLayout>